# tjson

./: .flake8  README.md  pyproject.toml
examples/: example.py
tjson/: again.py  container.py  errors.py  json_typing.py  node.py  test_node.py  test_tjson.py  tjson.py
tjson2/: node.py
